# Skillbox

./: .gitignore
Skillbox 11/Skillbox 2/: main.cpp
Skillbox 11/Skillbox1/: main.cpp
Skillbox 11/Skillbox3/: main.cpp
Skillbox 11/Skillbox4/: main.cpp
Skillbox 11/Skillbox5/: main.cpp
Skillbox 12/Skillbox 1/: main.cpp
Skillbox 12/Skillbox 2/: main.cpp
Skillbox 12/Skillbox 3/: main.cpp
Skillbox 13/Skillbox 1/: main.cpp
Skillbox 13/Skillbox 2/: main.cpp
Skillbox 13/Skillbox 3/: main.cpp
Skillbox 14/Skillbox 1/: main.cpp
Skillbox 14/Skillbox 2/: main.cpp
Skillbox 14/Skillbox 3/: main.cpp
Skillbox 14/Skillbox 4/: main.cpp
Skillbox 14/Skillbox 5/: main.cpp
Skillbox 14/Skillbox 6/: main.cpp
Skillbox 14/Skillbox 7/: main.cpp
Skillbox 14/Skillbox 8/: main.cpp
Skillbox 14/Skillbox 9/: main.cpp
Skillbox 15/Skillbox 1/: main.cpp
Skillbox 15/Skillbox 2/: main.cpp
Skillbox 15/Skillbox 3/: main.cpp
Skillbox 15/Skillbox 4/: main.cpp
Skillbox 16/Skillbox 1/: main.cpp
Skillbox 16/Skillbox 2/: main.cpp
Skillbox 16/Skillbox 3/: main.cpp
Skillbox 16/Skillbox 4/: main.cpp
Skillbox 16/Skillbox 5/: main.cpp
Skillbox 17/Skillbox 1/: main.cpp
Skillbox 17/Skillbox 2/: main.cpp
Skillbox 17/Skillbox 3/: main.cpp
Skillbox 19/Skillbox 5/: 1q.txt  (+13 more)
Skillbox 25/Skillbox 2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  inputControl.cpp  kbd.cpp  main.cpp  ram.cpp
Skillbox 38/Skillbox 2/: CMakeLists.txt  main.cpp
Skillbox 39/Skillbox 2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
search_engine/: CMakeLists.txt
(+206 files in other folders)
